# Doc2VecC

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  arg_parser.cpp  doc2vecc.cpp  doc2vecc.cu  huffman.cu  huffman.hpp  model.cu  model.hpp  model_config.hpp  test.sh  unigram.cu  unigram.hpp  utils.cpp  utils.hpp  vocab.cpp  vocab.hpp
components/: model_config.hpp  vocab.cpp  vocab.hpp
libs/: huffman.cu  huffman.hpp  sigmoid.hpp  unigram.cu  unigram.hpp
utils/: arg_parser.cpp  arg_parser.hpp
